fabric/testdata/out/ing_setanta-rules-staging-put-api-wildcard-admins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e enableAccessLog(2, 4, 5) -\u003e
      unverifiedAuditLog(\"https://identity.zalando.com/managed-id\") -\u003e oauthTokeninfoAllScope(\"uid\")
      -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\",
      \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(5) \u0026\u0026
      Path(\"/api/**\") \u0026\u0026 Method(\"PUT\") \u0026\u0026 JWTPayloadAllKV(\"https://identity.zalando.com/realm\",
      \"users\") \u0026\u0026 JWTPayloadAnyKV(\"https://identity.zalando.com/managed-id\",
      \"vobrien\", \"https://identity.zalando.com/managed-id\", \"aalexandre\", \"https://identity.zalando.com/managed-id\",
      \"matgonzalez\", \"https://identity.zalando.com/managed-id\", \"xgallegopujo\",
      \"https://identity.zalando.com/managed-id\", \"wchung\", \"https://identity.zalando.com/managed-id\",
      \"dhunt\", \"https://identity.zalando.com/managed-id\", \"brcullen\", \"https://identity.zalando.com/managed-id\",
      \"psuchon\", \"https://identity.zalando.com/managed-id\", \"ralmeida\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"f85d15a7-8d9a-4f3f-a3d2-160c41ac6a6d","deployment-id":"d-qpkcoa3a6yvf5wpdofjfgnob7","pipeline-id":"l-7qphde1bibps8wfqd27vr3cq7"},"name":"setanta-rules-staging-put-api-wildcard-admins","namespace":"default"},"spec":{"rules":[{"host":"setanta-rules-staging.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"setanta-rules-staging","servicePort":"http"},"pathType":"ImplementationSpecific"}]}},{ [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> enableAccessLog(2, 4, 5) -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(5) && Path("/api/**") && Method("PUT") &&
      JWTPayloadAllKV("https://identity.zalando.com/realm", "users") && JWTPayloadAnyKV("https://identity.zalando.com/managed-id",
      "vobrien", "https://identity.zalando.com/managed-id", "aalexandre", "https://identity.zalando.com/managed-id",
      "matgonzalez", "https://identity.zalando.com/managed-id", "xgallegopujo", "https://identity.zalando.com/managed-id",
      "wchung", "https://identity.zalando.com/managed-id", "dhunt", "https://identity.zalando.com/managed-id",
      "brcullen", "https://identity.zalando.com/managed-id", "psuchon", "https://identity.zalando.com/managed-id",
      "ralmeida") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2020-01-06T11:15:35Z"
  generation: 1
  labels:
    controller-uid: f85d15a7-8d9a-4f3f-a3d2-160c41ac6a6d
    deployment-id: d-qpkcoa3a6yvf5wpdofjfgnob7
    pipeline-id: l-7qphde1bibps8wfqd27vr3cq7
  name: setanta-rules-staging-put-api-wildcard-admins
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: setanta-rules-staging
    uid: f85d15a7-8d9a-4f3f-a3d2-160c41ac6a6d
  resourceVersion: "1361160678"
  uid: e4d8d219-d02f-4e73-9c9a-27b38a2c5ab7
spec:
  rules:
  - host: setanta-rules-staging.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-rules-staging
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-rules-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: setanta-rules-staging
            port:
              name: http
        pathType: ImplementationSpecific
  - host: rules.setanta-staging.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-rules-staging
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
